# bevy_live_wallpaper

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: check.yml
examples/: 3d_shapes.rs  change_monitor.rs  pointer_input.rs  simple.rs  windowed_mode.rs
src/: camera.rs  input.rs  lib.rs  plugin.rs  surface_info.rs  target_monitor.rs  windowed_backend.rs  windows_backend.rs
src/wayland/: backend.rs  mod.rs  render.rs  surface.rs
src/x11/: backend.rs  mod.rs  render.rs  surface.rs
