[package]
authors = ["yadokani389"]
description = "A Bevy plugin to create live wallpapers."
documentation = "https://docs.rs/bevy_live_wallpaper"
edition = "2024"
exclude = [
  ".envrc",
  ".gitignore",
  ".github",
  "flake.nix",
  "flake.lock",
  "media",
]
keywords = ["bevy", "live-wallpaper", "wallpaper"]
license = "MIT OR Apache-2.0"
name = "bevy_live_wallpaper"
readme = "README.md"
repository = "https://github.com/yadokani389/bevy_live_wallpaper"
rust-version = "1.88.0"
version = "0.2.0"

[features]
wayland = [
  "dep:wayland-backend",
  "dep:wayland-client",
  "dep:wayland-protocols-wlr",
  "dep:wayland-protocols",
  "dep:wgpu",
]
x11 = ["dep:as-raw-xcb-connection", "dep:x11rb", "dep:wgpu"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "bevy_render",
  "bevy_camera",
  "bevy_window",
  "trace",
] }
raw-window-handle = "0.6.2"
wgpu = { version = "26.0.1", optional = true }

# wayland
wayland-backend = { version = "0.3.11", features = [
  "client_system",
], optional = true }
wayland-client = { version = "0.31.11", optional = true }
wayland-protocols = { version = "0.32.9", features = [
  "client",
  "unstable",
], optional = true }
wayland-protocols-wlr = { version = "0.3.8", features = [
  "client",
], optional = true }

# x11
as-raw-xcb-connection = { version = "1.0.1", optional = true }
x11rb = { version = "0.13.2", features = [
  "allow-unsafe-code",
  "randr",
], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
] }


[dev-dependencies]
bevy = "0.17"
clap = { version = "4.5", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
